syntax = "proto3";

// For servers writing their persistent state variables to disk.
message ServerPersistentState {
    int32 current_term = 1;
    int32 term_voted = 2;
    int32 voted_for = 3;
    int32 last_applied = 4;
    
    //snapshotting
    int32 last_included_index = 5;
    int32 last_included_term = 6;
    string snapshot_filename = 7;
}